# cerbos

./: .dockerignore  .gitattributes  .gitignore  .golangci.yaml  .goreleaser-ci.yml  .goreleaser-dev.yml  .goreleaser.yml  .ignore-packages.yaml  .justfile  .mockery.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cerbos  Dockerfile.cerbosctl  Dockerfile.newengine  Makefile  NOTICE.txt  README.md  SCHEMA_VALIDATION_ENHANCEMENT.md  TODO.md  before.txt  buf.work.yaml  buf.yaml  c.sh  check.sh  conf.default.yaml  go.mod  go.sum  go.work  go.work.sum  main.go  netlify.toml
.changelog/: 20251124_1526.txt  20251124_1710.txt  20251124_1736.txt  20251124_1744.txt  20251125_0532.txt  20251125_1846.txt  20251127_0434.txt  20251202_1321.txt  20251205_1145.txt  20251205_1235.txt  20251212_1132.txt  20251212_1652.txt  20251212_1804.txt  20251215_1136.txt  20251215_1520.txt  20251218_0938.txt  20251218_1233.txt  20260113_1307.txt  20260115_0845.txt  20260115_1354.txt  20260121_0846.txt  20260123_1206.txt  20260123_1435.txt  20260123_1920.txt  20260123_1953.txt  20260127_1220.txt  20260129_0551.txt  20260209_1018.txt  20260219_1505.txt  20260317_1432.txt  20260326_1733.txt  20260409_1655.txt  20260427_1459.txt  20260427_1504.txt  20260428_1000.txt  20260430_0746.txt  20260501_1008.txt  20260505_1237.txt  20260520_1843.txt  20260522_1227.txt  (+9 more)
.chglog/: CHANGELOG.tpl.adoc  config.yml
.github/: codecov.yaml  dependabot.yml  renovate.json  semantic.yml
api/: buf.md
client/: README.md  admin.go  admin_test.go  client.go  (+9 more)
internal/wasm/files/: Cargo.toml  index.html
(+2988 files in other folders)
