[package]
name = "wasmpolicy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
serde = { version = "1.0.137", features = ["derive"] }